--- a/RainbowTabs/Base.lproj/Main.storyboard
+++ b/RainbowTabs/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Red-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RainbowTabs" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="RedViewController" customModule="RainbowTabs" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -29,7 +29,7 @@
         <!--Orange-->
         <scene sceneID="e7i-9M-1u9">
             <objects>
-                <viewController id="Quf-7b-lEn" sceneMemberID="viewController">
+                <viewController id="Quf-7b-lEn" customClass="OrangeViewController" customModule="RainbowTabs" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kfR-kx-urJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -45,7 +45,7 @@
         <!--Yellow-->
         <scene sceneID="iLp-fp-TaV">
             <objects>
-                <viewController title="Yellow" id="Ht3-pm-amv" sceneMemberID="viewController">
+                <viewController title="Yellow" id="Ht3-pm-amv" customClass="YellowViewController" customModule="RainbowTabs" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gKn-7h-I19">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -58,10 +58,26 @@
             </objects>
             <point key="canvasLocation" x="415" y="1066"/>
         </scene>
+        <!--Purple-->
+        <scene sceneID="6nc-QY-1Fv">
+            <objects>
+                <viewController title="Purple" id="oud-Dy-eYR" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="S1G-HN-HNz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="SzY-zB-flC"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Purple" id="afQ-mK-z03"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jXb-K6-uRj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2687" y="1069"/>
+        </scene>
         <!--Green-->
         <scene sceneID="ucS-ex-TPz">
             <objects>
-                <viewController title="Green" id="vmg-gG-L3s" sceneMemberID="viewController">
+                <viewController title="Green" id="vmg-gG-L3s" customClass="GreenViewController" customModule="RainbowTabs" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gpG-mi-tRI">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -77,7 +93,7 @@
         <!--Blue-->
         <scene sceneID="LBp-Zp-0rZ">
             <objects>
-                <viewController title="Blue" id="s3g-wh-qyi" sceneMemberID="viewController">
+                <viewController title="Blue" id="s3g-wh-qyi" customClass="BlueViewController" customModule="RainbowTabs" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Xj7-te-JEF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -96,6 +112,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="eCH-Ed-dC0" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="KVb-Os-lSG">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
